 -- Added CHARSET and NEW-ENVIRON telnet negotiations which may affect
    clients.
 -- Add SSL encryption support including ssl_certificate_file,
    port_ssl, ssl_certificate_key, and ssl_certificate_password
    configuration options.  This is enabled with --enable-ssl.
 -- Add Telnet option STARTTLS to support secure connections.
    This is enabled with --enable-ssl.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Support optional action list with @break.  Add corresponding
    @assert command. (Issue 36).
 -- Help files support PennMUSH-style multiple topics for each help
    entry; consecutive &FOO lines refer to the same content
    (Issue 238).  Thanks Alierak.
 -- Added LPAD(), CPAD(), and RPAD() functions to duplicate previous
    non-truncating LJUST(), CENTER(), and RJUST() functionality
    (Issue 13).  Thanks Jake.
 -- Added /delete switch to @function and allow removal of user-defined
    functions (Issue 250).  Thanks Jake.
 -- Added fifth, sort-type argument to SETINTER(), SETUNION(), and
    SETDIFF() (Issue 3).
 -- Added @comjoin, @comleave, @comon, and @comoff for use with channel
    objects.  Each evaluates to a message shown to the channel member
    at the corresponding event (Issue 9).
 -- Added TR() function to allow transforming strings according to a
    specified pattern (Issue 262). Thanks Jake.
 -- REVWORDS() now accepts multi-character input and output delimiters
    (Issue 21). Thanks Jake.
 -- Use mux_string in SCRAMBLE() and SECURE() to avoid stripping ANSI.
 -- Added PennMUSH-compatible TERMINFO() to allow softcode access to
    the client's capabilities.
 -- Separated inline SQL supprt from Firan support so that it can be
    enabled separately.
 -- Feature complete for UTF-8 string layer.
 -- Turned on private use code points for Tengwar and Klingon even
    though these code point assignments are not official.
 -- Added @eval command.


Bug Fixes:
~~~~~~~~~
 -- INFO should show 'Patches' or 'INFO 1', but not both (Issue 236).